* Build products now created only under target & dist (CC-81). Patch by Jerome Lacoste

build.xml (main)
----------------------
* Build products now created only under target & dist (CC-81). Patch by Jerome Lacoste

BuildQueue
----------------------
* Add support for multiple build threads (ThreadQueue). Patch by Jared Richardson

ClearCaseBootstrapper
----------------------
* fixed /dev/nul to /dev/null (CC-76). Patch by Esa Laine 

compile.xsl
----------------------
* Support ant-contrib's "compilewithwalls" task. Patch by Paul McLachlan

Contrib
----------------------
* A Windows system tray icon for monitoring a CruiseControl build process. Contributed by Ivan Moore.
* A NTServiceWrapper for running CruiseControl as an NT service. Contributed by Nick Chalko.

CruiseControl
----------------------
* Now obeys to Checkstyle 3.4 rules HideUtilityClassConstructor and FinalClass (CC-56). Patch by Jerome Lacoste
* Removed support for -upgrade parameter to update CruiseControl 1.x config files.

CruiseControlControllerAgent
----------------------
* Uses new JMXConnectorServer instead of RmiAdapter because of MX4J upgrade. Patch by Mark Doliner

cruisecontrol-jsp12.tld
----------------------
* Fix id attribute typo for LinkTag. Patch by Gareth Reakes

CurrentBuildStatusBootstrapper & Publisher
----------------------
* Checks parent directory of file exists as part of validation rather than failing later.

EmailPublisher & friends
----------------------
* Uses new EmailMapperHelper to map addresses with EmailMappers (CC-2). Patch by Esa Laine

HTMLEmailPublisher
----------------------
* Now uses default logdir "logs/<projectname>" if none is specified (CC-64)

(Link)JabberPublisher
----------------------
* Added new JabberPublisher and subclass to report buildresults through Jabber (CC-63). Patch by Jonas Edgeworth

JMX Support
----------------------
* Upgraded to MX4J 2.0.1 (including support for JSR 160)

Log
----------------------